# SlicerTractParcellation

./: CMakeLists.txt  README.md
AnatomicalTractParcellation/: AnatomicalTractParcellation.py  CMakeLists.txt
AnatomicalTractParcellation/Resources/UI/: AnatomcalTractParcellation.ui
